<resources>
    <string name="app_name">MyBsuir</string>
    <string name="login_prompt">Добро пожаловать в интегрированную информационную систему(ИИС)<br /> <br />«БГУИР: Университет»</string>
    <string name="error_stub">Error: <br />Roses are red<br />Violets are blue<br />Unexpected curly bracket<br />On line 32</string>
    <string name="login_hint">
        Для входа в систему используйте учетные данные, что и для доступа в интернет (номер студенческого билета и пароль)
    </string>
    <string name="login_submit">Войти</string>
    <string name="skills_title">Ключенвые навыки</string>
    <string name="info_title">Основная информация</string>
    <string name="no_summary">Пока не указано никакой информации…</string>
    <string name="references_title">Ссылки</string>
    <string name="no_references">У вас пока нет никаких ссылок…</string>
    <string name="skill_add_hint">Навык…</string>
    <string name="add_title">Добавить</string>
    <string name="skill_add_tip">Начните вводить для отображения подсказок</string>
    <string name="reference_add_hint">Название ссылки…</string>
    <string name="reference_add_link_hint">Ссылка…</string>
</resources>