<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/layout_skills"
        android:background="@drawable/b_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/skills_title"
            android:text="@string/skills_title"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/skills_view"
            android:layout_below="@id/skills_title"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="3"
            tools:listitem="@layout/i_skill"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_info"
        android:background="@drawable/b_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/layout_skills">

        <!-- should i name it `bio`? -->
        <!-- or `summary` as api does? -->
        <TextView
            android:id="@+id/info_title"
            android:text="@string/info_title"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profile_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_title"
            android:layout_marginTop="8dp"
            tools:text="@string/no_summary"
            android:layout_marginHorizontal="4dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_references"
        android:background="@drawable/b_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/layout_info">

        <TextView
            android:id="@+id/references_title"
            android:text="@string/references_title"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/references_view"
            android:layout_below="@id/references_title"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="3"
            tools:listitem="@layout/i_reference"/>

        <TextView
            android:id="@+id/profile_no_references"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/references_title"
            android:layout_marginTop="8dp"
            android:text="@string/no_references"
            android:layout_marginHorizontal="4dp"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>