<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/skill_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Design.TextInputLayout"
        app:hintEnabled="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/skill_add_submit">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/skill_add_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/skill_add_hint"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skill_add_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:text="@string/add_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skill_add_suggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/skill_add_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/skill_add_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/skill_add_layout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/skill_add_tip"/>
</RelativeLayout>