<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ref_add_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/Widget.Design.TextInputLayout"
        app:hintEnabled="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/ref_add_submit">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ref_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/reference_add_hint"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ref_add_link_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/Widget.Design.TextInputLayout"
        app:hintEnabled="false"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ref_add_name_layout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ref_add_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/reference_add_link_hint"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ref_add_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        app:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:text="@string/add_title" />

    <TextView
        android:id="@+id/ref_add_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ref_add_link_layout"
        android:layout_margin="8dp"/>

</RelativeLayout>